First production deployment

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7f4fbbc98a79421a59d9",
+    "/css/app.css": "/css/app.css?id=e6d38e3b00b81c749dbb"
 }
