Deployment of corrections

--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@ckeditor/ckeditor5-alignment": "^25.0.0",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
-        "@ckeditor/ckeditor5-image": "^25.0.0",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
@@ -24,10 +22,6 @@
         "tailwindcss": "^2.0.1"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^25.0.0",
-        "@ckeditor/ckeditor5-heading": "^25.0.0",
-        "@ckeditor/ckeditor5-upload": "^25.0.0",
-        "ajv": "^6.8.1",
-        "ckeditor5-build-classic-base64-upload-adapter": "^1.0.1"
+        "ajv": "^6.8.1"
     }
 }
