--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=3477fbc2db9aa9eb3cca",
-    "/css/app.css": "/css/app.css?id=49b58eb91dc2a4180657"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
