--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=3477fbc2db9aa9eb3cca",
-    "/css/app.css": "/css/app.css?id=403020b85999a9a2ea89"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
